--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,6 +5,9 @@
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_ZMK_USB_LOGGING=y
 
 CONFIG_ZMK_MOUSE=y
+# https://github.com/zmkfirmware/zmk/issues/1487
+# Added to try and connect to chromebook plus
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y 
